Fixed overlapping text with divs

--- a/static/css/main_menu.css
+++ b/static/css/main_menu.css
@@ -1,20 +1,13 @@
 
 
-#welcomeHeader {
-    padding-top: 30%;
 
-}
-
-#intro\ text {
-    padding-right: 20%;
-}
 
 @media(min-width:768px) {
     #nav-side-menu {
         background-color: darkred;
         position: fixed;
         right: 0;
-        min-height: 100vh;
+        min-height: 100%;
     }
 
     #navbarContents {
@@ -29,15 +22,31 @@
     li {
         list-style-type: none;
     }
+
+    #welcomeHeader {
+    padding-top: 30%;
+
+    }
+
+    #intro\ text {
+        padding-right: 20%;
+    }
 }
 
 @media(max-width:768px){
     #nav-side-menu{
         background-color: darkred;
-        min-height:auto;
-        max-height:20vh;
+        max-height:30%;
         position:fixed;
+
     }
+
+    #welcomeMessage{
+        padding-top:40%;
+        text-align:center;
+        height:30%;
+    }
+
 
     li {
         list-style-type: none;
@@ -56,7 +65,6 @@ a {
         font-size: 0.8em;
     }
 }
-
 
 
 
